readme content, input as filename on argument